--- a/index.html
+++ b/index.html
@@ -1,114 +1,216 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="utf-8" />
-  <title>LIFF Register</title>
+  <meta charset="utf-8">
+  <title>Vehicle Booking</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+
   <style>
-    body { font-family: sans-serif; padding: 20px; }
-    button { padding: 10px; margin-top: 10px; }
-    pre { background: #f4f4f4; padding: 10px; }
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 480px;
+      margin: auto;
+      padding: 20px;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 1.6rem;
+    }
+
+    .card {
+      background: #fff;
+      border-radius: 16px;
+      padding: 20px;
+      margin-top: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,.08);
+    }
+
+    .profile {
+      text-align: center;
+      font-size: 1.2rem;
+      margin-bottom: 12px;
+    }
+
+    .role {
+      text-align: center;
+      font-weight: bold;
+      margin-bottom: 16px;
+    }
+
+    button {
+      width: 100%;
+      padding: 16px;
+      font-size: 1.1rem;
+      border-radius: 12px;
+      border: none;
+      margin-top: 10px;
+      cursor: pointer;
+    }
+
+    .btn-driver {
+      background: #005bea;
+      color: #fff;
+    }
+
+    .btn-cancel {
+      background: #ff5252;
+      color: #fff;
+    }
+
+    .btn-book {
+      background: #00b900;
+      color: #fff;
+    }
+
+    .version {
+      text-align: center;
+      font-size: .8rem;
+      color: #999;
+      margin-top: 20px;
+    }
+
+    pre {
+      font-size: .75rem;
+      background: #eee;
+      padding: 10px;
+      margin-top: 10px;
+    }
   </style>
 </head>
+
 <body>
 
-<h2>LIFF Register</h2>
-<p id="version"></p>
+<div class="container">
+  <h1>ระบบจองรถ</h1>
 
-<button onclick="registerUser()">Register User</button>
-<button onclick="forceLogout()">Force Logout</button>
+  <div class="card">
+    <div class="profile" id="profile">กำลังโหลด...</div>
+    <div class="role" id="role"></div>
 
-<pre id="log"></pre>
+    <button id="toggleBtn" onclick="toggleDriver()"></button>
+
+    <button class="btn-book" onclick="alert('ขั้นต่อไปจะทำระบบจองรถ')">
+      🚗 จองรถ
+    </button>
+  </div>
+
+  <pre id="log"></pre>
+  <div class="version" id="version"></div>
+</div>
 
 <script>
-/* ================= CONFIG ================= */
+/* ===== CONFIG ===== */
 const LIFF_ID = "2008934745-qU0fPztf";
 const GAS_ENDPOINT =
-  "https://script.google.com/macros/s/AKfycbzlgw-ZHCEH9tMPjEY00u4etK-WkNhwMjXtYVRqLKbdEC2eFSQOKx-h7Q7BMMnM8sGCUQ/exec";
+  "https://script.google.com/macros/s/AKfycbypkN_bZ4MOZ9HwXNaQGaZ4SexwRKAclaSr-NA1LZfrwj-X57cbDCkdUd_BFir8kkY3iQ/exec";
 
-/* version stamp */
-document.getElementById("version").innerText =
-  "Version: " + new Date().toISOString();
-
-/* ================= LOG ================= */
+/* ===== UTIL ===== */
 function log(msg) {
   document.getElementById("log").textContent += msg + "\n";
   console.log(msg);
 }
 
-/* ================= INIT LIFF ================= */
-async function initLiff() {
-  log("init liff...");
+/* ===== STATE ===== */
+let currentRole = "user";
 
+/* ===== INIT ===== */
+async function initLiff() {
   try {
     await liff.init({ liffId: LIFF_ID });
-    log("liff ready");
 
     if (!liff.isLoggedIn()) {
-      log("not logged in → redirect login");
       liff.login();
       return;
     }
 
     const profile = await liff.getProfile();
-    log("userId: " + profile.userId);
-    log("name: " + profile.displayName);
+    document.getElementById("profile").innerText =
+      `สวัสดี ${profile.displayName}`;
+
+    await autoRegister(profile);
 
   } catch (err) {
-    console.error(err);
-    log("init error: " + err.message);
-
-    // 🔥 TOKEN REVOKED HANDLER
     alert("Session หมดอายุ กำลัง login ใหม่");
     liff.logout();
     liff.login();
   }
 }
 
-/* ================= REGISTER ================= */
-async function registerUser() {
-  try {
-    const profile = await liff.getProfile();
+/* ===== AUTO REGISTER ===== */
+async function autoRegister(profile) {
+  const payload = {
+    action: "auto_register",
+    line_user_id: profile.userId,
+    display_name: profile.displayName
+  };
 
-    const payload = {
-      line_user_id: profile.userId,
-      display_name: profile.displayName
-    };
+  const res = await fetch(GAS_ENDPOINT, {
+    method: "POST",
+    headers: { "Content-Type": "text/plain" },
+    body: JSON.stringify(payload)
+  });
 
-    log("POST → " + GAS_ENDPOINT);
+  const data = await res.json();
+  currentRole = data.role;
 
-    const res = await fetch(GAS_ENDPOINT, {
-      method: "POST",
-      headers: { "Content-Type": "text/plain" },
-      body: JSON.stringify(payload)
-    });
+  renderRole();
+}
 
-    log("GAS response status: " + res.status);
-    const text = await res.text();
-    log("GAS response text: " + text);
+/* ===== TOGGLE DRIVER ===== */
+async function toggleDriver() {
+  const action =
+    currentRole === "driver" ? "cancel_driver" : "become_driver";
 
-    alert("Register success");
+  const profile = await liff.getProfile();
 
-  } catch (err) {
-    console.error(err);
-    log("register error: " + err.message);
+  const payload = {
+    action: action,
+    line_user_id: profile.userId
+  };
 
-    // 🔥 TOKEN REVOKED HANDLER
-    if (err.message.includes("revoked")) {
-      alert("Session หมดอายุ กำลัง login ใหม่");
-      liff.logout();
-      liff.login();
-    }
+  const res = await fetch(GAS_ENDPOINT, {
+    method: "POST",
+    headers: { "Content-Type": "text/plain" },
+    body: JSON.stringify(payload)
+  });
+
+  const data = await res.json();
+  currentRole = data.role;
+
+  renderRole();
+  alert("อัปเดตสถานะเรียบร้อย");
+}
+
+/* ===== RENDER ===== */
+function renderRole() {
+  const roleEl = document.getElementById("role");
+  const btn = document.getElementById("toggleBtn");
+
+  roleEl.innerText =
+    "สถานะ: " + (currentRole === "driver" ? "พนักงานขับรถ" : "ผู้ใช้งานทั่วไป");
+
+  if (currentRole === "driver") {
+    btn.innerText = "❌ ยกเลิกเป็นพนักงานขับรถ";
+    btn.className = "btn-cancel";
+  } else {
+    btn.innerText = "🚘 สมัครเป็นพนักงานขับรถ";
+    btn.className = "btn-driver";
   }
 }
 
-/* ================= FORCE LOGOUT ================= */
-function forceLogout() {
-  liff.logout();
-  alert("Logged out – เปิดใหม่เพื่อ allow อีกครั้ง");
-}
+/* ===== VERSION ===== */
+document.getElementById("version").innerText =
+  "Version: " + new Date().toLocaleString();
 
-/* ================= START ================= */
 initLiff();
 </script>
 
